dashborad/dash-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dash-ingress-https
  namespace: kubernetes-dashboard
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - k8s.test
      secretName: dash-tls
  rules:
    - host: k8s.test
      http:
        paths:
          - backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 443
            pathType: Prefix
            path: /
